--- a/design_course/html_css_crash_course_2021/css/main.scss
+++ b/design_course/html_css_crash_course_2021/css/main.scss
@@ -1,6 +1,186 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
+:root{
+    --primar-color:#007AF3
+}
 body{
     background: #F2F2F2;
     margin: 0;
     font-family: 'Poppins';
+}
+
+.navbar{
+    padding:1em;
+    background: white;
+
+    .logo{
+        text-decoration: none;
+        font-weight: bold;
+        color: black;
+        font-size: 1.2em;
+    }
+
+    span {
+        color: var(--primar-color);
+    }
+    nav {
+        display: none;
+    }
+
+    .container {
+        display: flex;
+        place-content: space-between;
+    }
+
+    .mobile-menu {
+        cursor: pointer;
+    }
+}
+
+a {
+    color: #444;
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+section {
+    padding: 5em 2em;
+}
+
+.hero {
+    text-align: center;
+}
+
+.left-col {
+    .subhead{
+        text-transform: uppercase;
+        font-weight: bold;
+        color: gray;
+        letter-spacing: .3em;
+    }
+    h1 {
+        font-size: 2.5em;
+        line-height: 1.3em;
+        margin-top: .2em;
+    }
+
+    .primary-cta {
+        background: var(--primar-color);
+        color: white;
+        text-decoration: none;
+        padding: .6em 1.3em;
+        font-size: 1.4em;
+        border-radius: 5em;
+        font-weight: bold;
+        display: inline-block;
+    }
+
+    .watch-video-cta {
+        display: block;
+        margin-top: 1em;
+    }
+
+    img {
+        margin-right: .5em;
+    }
+}
+
+.hero-img {
+    width: 70%;
+    margin-top: 3em;
+}
+
+.features-section {
+    background: #20272E;
+    color: white;
+}
+
+ul-features-list {
+    margin: 0;
+    padding-left: .1em;
+
+    li {
+        font-size: 1.1em;
+        margin-bottom: 1em;
+        margin-left: 2em;
+        position: relative;
+        
+
+        &:before{
+            content: '';
+            left: -2em;
+            position: absolute;
+            background-image: url('../images/bullet.svg');
+            width: 20px;
+            height: 20px;
+            background-size: contain;
+            margin-right: .5em;
+        }
+    }
+}
+
+.features-section img {
+    display: none;
+}
+
+.testimonials-section {
+    background: var(--primar-color);
+    color: white;
+
+    li {
+        background-color: rgb(38, 38, 189);
+        text-align: center;
+        padding: 2em 2em;
+        width: 80%;
+        margin: 0 auto 5em auto;
+        border-radius: 1em;
+        img{
+            width: 5em;
+            height: 5em;
+            border: 5px solid rgb(42, 40, 182);
+            border-radius: 50%;
+            margin-top: -4.5em;
+        }
+    }
+}
+
+h2 {
+    font-size: 2em;
+}
+
+label {
+    display: block;
+    font-size: 1.2em;
+    margin-bottom: .5em;
+}
+
+input, textarea {
+    width: 100%;
+    padding: .8em;
+    margin-bottom: 1em;
+    border-radius: .5em;
+    border: 2px solid gray;
+    box-sizing: border-box;
+}
+
+input[type='submit'] {
+    background-color: var(--primar-color);
+    color: white;
+    font-weight: bold;
+    font-size: 1.3em;
+    border: none;
+    margin-bottom: 5em;
+    border-radius: 5em;
+    display: inline-block;
+    padding: .8em 2em;
+    // width: unset;
+    cursor: pointer;
+}
+
+iframe {
+    width: 100%;
+    height: 300px;
 }
